samples/_failures_safe/1761081432_59d3c3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8bf839eb.c: In function ‘main’:
./samples/SAFE/__tmp_8bf839eb.c:148:9: error: expected declaration or statement at end of input
  148 |         buffer_free(&decompressed_buf);
      |         ^~~~~~~~~~~
./samples/SAFE/__tmp_8bf839eb.c:148:9: error: expected declaration or statement at end of input
